* added --match-group
* new version of runxboxdrv
* fixed axis inversion issue in --axismap
* fixed assertion in relative axis filter
* fixed --dpad-as-button
* fixed --dpad-only
* added support for Playstation button names (triangle,
  circle, square, cross, L1, L2, L3, R1, R2, R3)
* added --on-connect and --on-disconnect to xboxdrv --daemon
* added ability to set LED per controller slot


xboxdrv 0.7.0 - (28/Jan/2011)
=============================

* switched to libusb-1.0
* -D, --daemon replaces xboxdrv-daemon
* --daemon supports hotpluging via libudev, even in applications that
  don't support it themselves
* cleaned up axis/button modifier some more
* startup output got cleaned up
* fixed double Ctrl-c issue
* added --modifier MODIFIER,...
* configuration toggle button now works with modifiers too
* renamed --ui-new to --next-config
* renamed --ui-toggle to --toggle
* fixed incorrect endpoint detection for Xbox1 controller
* native Playstation 3 USB controller support
* added axis rotation modifier
* renamed A, B, X, Y axis to BTN_A, BTN_B, BTN_X, BTN_Y to avoid
  confusion with X1, Y1
* added --list-all, --list-key, -list-rel, ... to display all
  available symbolic name
* changed device_id syntax from 1-BTN_A to now BTN_A@1


xboxdrv 0.6.5 - (22/Jan/2011)
=============================

* fixed incorrect variable initalisation, leading to button presses
  getting lost sometimes
* fixed initialisation issue for Chatpad connected to controllers with
  bcdDevice 0x0114


xboxdrv 0.6.4 - (13/Jan/2011)
=============================

* fixed bug that disabled all axis when a button was pressed
* fixed some missing include


xboxdrv 0.6.3 - (10/Jan/2011)
=============================

* chatpad support (still rough), special thanks to Jani Virta, Andy
  Kirkham, dwomac and GAFBlizzard who helped make it possible
* added  --chatpad, --chatpad-no-init and --chatpad-debug
* added --headset, --headset-dump FILE and --headset-play FILE, for
  experimentation only